@@ -1,31 +1,26 @@
 [client]
-port    = 3306
-socket    = /tmp/mysql.sock
+port   = 3306
+socket = /tmp/mysql.sock
 
 [mysqld]
 datadir = /data/mysql
 port    = 3306
-socket    = /tmp/mysql.sock
+socket  = /tmp/mysql.sock
 
-#rpl_semi_sync_master_enabled=1
-#rpl_semi_sync_master_timeout=1000
-#rpl_semi_sync_slave_enabled=1
-
-general-log = 0
-general_log_file=/var/log/mysql/mysql.log
-
-slow-query-log = 1
+general-log         = 0
+general_log_file    = /var/log/mysql/sql.log
+slow-query-log      = 1
+long-query-time     = 1
 slow-query-log-file = /var/log/mysql/slow.log
 log-slow-admin-statements
 log-slow-slave-statements
-long-query-time = 1
-log-error = /var/log/mysql/errors.log
-log-warnings  = 2
+log-error           = /var/log/mysql/errors.log
+log-warnings        = 2
 
-back_log = 512
-max_connections =1024
+back_log           = 512
+max_connections    = 2048
 max_connect_errors = 10000
-connect_timeout = 60
+connect_timeout    = 60
 
 skip-external-locking
 skip-name-resolve
@@ -34,45 +29,49 @@ skip-name-resolve
 #skip-innodb_doublewrite
 explicit_defaults_for_timestamp
 
-key_buffer_size = 1M
-max_allowed_packet = 32M
-table_open_cache = 512
-sort_buffer_size = 8M
-read_buffer_size = 4M
-read_rnd_buffer_size = 32M
+key_buffer_size         = 1M
+max_allowed_packet      = 256M
+table_open_cache        = 512
+sort_buffer_size        = 8M
+read_buffer_size        = 4M
+read_rnd_buffer_size    = 32M
 myisam_sort_buffer_size = 1M
-thread_cache_size = 32
+thread_cache_size       = 32
 
-query_cache_size = 256M
 query_cache_type = 1
+query_cache_size = 16M
 
-server-id = 1
-log-bin                 = mysql-bin
-binlog_format           = mixed
-sync_binlog             = 1
-expire-logs-days        = 7
-max_binlog_size         = 256M
-sync_binlog=1
+server-id                     = 1
+log-bin                       = mysql-bin
+binlog_format                 = mixed
+sync_binlog                   = 1
+expire-logs-days              = 7
+max_binlog_size               = 256M
+sync_binlog                   = 1
+#rpl_semi_sync_master_enabled = 1
+#rpl_semi_sync_master_timeout = 1000
+#rpl_semi_sync_slave_enabled  = 1
 
-transaction_isolation = REPEATABLE-READ
-innodb_file_per_table
-innodb_data_home_dir = /data/mysql
-innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = /data/mysql
-innodb_buffer_pool_size = 1G
-innodb_log_file_size = 128M
-##innodb_log_file_size = 1300M
-##innodb_log_files_in_group = 3
-#innodb_file_format = Barracuda
-default-storage-engine = InnoDB
-innodb_max_dirty_pages_pct = 90
-innodb_file_per_table = 1
-innodb_flush_method = O_DIRECT
-innodb_io_capacity = 500
-character-set-server = utf8
-innodb_log_buffer_size = 8M
+default-storage-engine         = InnoDB
+transaction_isolation          = REPEATABLE-READ
+innodb_data_home_dir           = /data/mysql
+innodb_data_file_path          = ibdata1:10M:autoextend
+innodb_log_group_home_dir      = /data/mysql
+innodb_buffer_pool_size        = 1G
+innodb_log_file_size           = 512M
+innodb_log_files_in_group      = 3
+innodb_file_format             = Barracuda
+innodb_max_dirty_pages_pct     = 90
+innodb_file_per_table          = 1
+innodb_open_files              = 10240
+innodb_flush_method            = O_DIRECT
+innodb_io_capacity             = 500
+innodb_read_io_threads         = 8
+innodb_write_io_threads        = 8
+character-set-server           = utf8
+innodb_log_buffer_size         = 8M
 innodb_flush_log_at_trx_commit = 1
-innodb_lock_wait_timeout = 50
+innodb_lock_wait_timeout       = 60
 
 [mysqldump]
 quick
@@ -83,10 +82,10 @@ no-auto-rehash
 #safe-updates
 
 [myisamchk]
-key_buffer_size = 128M
+key_buffer_size  = 128M
 sort_buffer_size = 128M
-read_buffer = 2M
-write_buffer = 2M
+read_buffer      = 2M
+write_buffer     = 2M
 
 [mysqlhotcopy]
 interactive-timeout
